--- a/PrjAssignmentFa25/nbproject/project.properties
+++ b/PrjAssignmentFa25/nbproject/project.properties
@@ -26,9 +26,8 @@ dist.ear.war=${dist.dir}/${war.ear.name}
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.war=${dist.dir}/${war.name}
 excludes=
-file.reference.gson-2.8.9.jar=lib\\gson-2.8.9.jar
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-3.0.0.jar=lib\\jakarta.servlet.jsp.jstl-3.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-api-3.0.0.jar=lib\\jakarta.servlet.jsp.jstl-api-3.0.0.jar
 file.reference.jaxb-api-2.1.jar=lib\\jaxb-api-2.1.jar
 file.reference.mssql-jdbc-13.2.0.jre11.jar=lib\\mssql-jdbc-13.2.0.jre11.jar
 file.reference.sqljdbc42.jar=lib\\sqljdbc42.jar
@@ -41,12 +40,11 @@ j2ee.platform.classpath=${j2ee.server.home}/bin/tomcat-juli.jar:${j2ee.server.ho
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
-    ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
     ${file.reference.jaxb-api-2.1.jar}:\
     ${file.reference.mssql-jdbc-13.2.0.jre11.jar}:\
     ${file.reference.sqljdbc42.jar}:\
-    ${file.reference.gson-2.8.9.jar}
+    ${file.reference.jakarta.servlet.jsp.jstl-3.0.0.jar}:\
+    ${file.reference.jakarta.servlet.jsp.jstl-api-3.0.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
